Kubernetes/Deployment/monitoring/heapster/heapster-deploy-1.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: heapster-1
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        task: monitoring
        k8s-app: heapster-1
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9122'    
    spec:
      serviceAccountName: heapster
      containers:
      - name: influxdb-exporter
        image: registry.gcsc.sap.corp/monitor/influxdb-exporter:v0.1.0
        resources:
          limits:
            memory: 100Mi
          requests:
            memory: 100Mi          
        volumeMounts: 
        - name: localtime
          mountPath: /etc/localtime
        ports:
        - name: prometheus
          containerPort: 9122
      - name: heapster-1
        image: gcr.io/google_containers/heapster-amd64:v1.4.2
        imagePullPolicy: IfNotPresent
        command:
        - /heapster
        - --source=kubernetes
        - --sink=influxdb:http://localhost:9122
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 100Mi          
        volumeMounts: 
        - name: localtime
          mountPath: /etc/localtime
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime
