Kubernetes/Deployment/monitoring/heapster/heapster-deploy.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: heapster
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        task: monitoring
        k8s-app: heapster
    spec:
      serviceAccountName: heapster
      containers:
      - name: heapster
        image: gcr.io/google_containers/heapster-amd64:v1.4.0
        imagePullPolicy: IfNotPresent
        command:
        - /heapster
        - --source=kubernetes:https://kubernetes.default
        - --sink=influxdb:http://influxdb.monitoring.svc:8086
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 100Mi          
        volumeMounts: 
        - name: localtime
          mountPath: /etc/localtime  
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime
                
---
apiVersion: v1
kind: Service
metadata:
  labels:
    task: monitoring
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: Heapster
  name: heapster
  namespace: kube-system
spec:
  ports:
  - port: 80
    targetPort: 8082
  selector:
    k8s-app: heapster
