Kubernetes/Deployment/monitoring/heapster/heapster-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: heapster
 namespace: kube-system
 annotations:
spec:
 rules:
   - host: heapster.gcsc.sap.corp
     http:
       paths:
         - path: /
           backend:
             serviceName: heapster
             servicePort: 80
